// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button snapshot 1`] = `
.c0 {
  line-height: 0.9;
  font-size: 5rem;
  font-family: 'Roboto Condensed',sans-serif;
  font-weight: 400;
  color: inherit;
  text-transform: uppercase;
}

@media (min-width:768px) {

}

<div>
  <span
    class="c0"
  >
    test
  </span>
</div>
`;

exports[`button snapshot 2`] = `
<div>
  <span
    class="Title-xde5hf-0 cKlSwu"
  >
    test
  </span>
</div>
`;

exports[`button snapshot 3`] = `
<div>
  <span
    class="Title-xde5hf-0 ZCDQm"
  >
    test
  </span>
</div>
`;

exports[`button snapshot 4`] = `
<div>
  <span
    class="Title-xde5hf-0 cENZZw"
  >
    test
  </span>
</div>
`;
